src/test/ui/inline-const/const-expr-lifetime-err.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/const-expr-lifetime-err.rs:24:30
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
LL |     let y = ();
LL |     equate(InvariantRef::new(&y), const { InvariantRef::<'a>::NEW });
   |            ------------------^^-
   |            |                 |
   |            |                 borrowed value does not live long enough
   |            argument requires that `y` is borrowed for `'a`
LL |
LL | }
   | - `y` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
